Gap and container size fixed

--- a/assets/css/HomePage_section1.css
+++ b/assets/css/HomePage_section1.css
@@ -21,6 +21,7 @@
     align-items: center;
     width: 1440px;
     max-width: 100%;
+    height: 800px;
   }
   
   .main-title {
