--- a/assets/css/HomePage_section4.css
+++ b/assets/css/HomePage_section4.css
@@ -21,7 +21,7 @@
   position: absolute;
   width: 1440px;
   height: 909px;
-  top: 2635px;
+  top: 2625px;
   /* border: red solid 2px; */
   overflow: hidden;
 }
