--- a/assets/css/HomePage_section5.css
+++ b/assets/css/HomePage_section5.css
@@ -19,10 +19,10 @@
   position: absolute;
 
   width: 1440px;
-  height: 1053px;
+  height: 920px;
   /* border: red solid 2px; */
   top: 3544px;
-  /* margin-bottom: 144px; */
+  margin-top: 1em;
 
 }
 
