--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   position: relative;
-  top: 266em;
+  top: 5em;
   bottom: 0;
   width: 1440px;
   height: 144px;
